--- a/src/resources/sass/builder/header.scss
+++ b/src/resources/sass/builder/header.scss
@@ -7,6 +7,7 @@ header{
     justify-content: space-between  ;
     position: sticky;
     top:0;
+    z-index: 190;
 }
 .header_icon2{
     font-size:.9em;
