--- a/src/resources/sass/builder/icons/_icons.scss
+++ b/src/resources/sass/builder/icons/_icons.scss
@@ -25,8 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-.ico-arrowLeft:before {
+.ico-drag2:before {
+    content: "\e912";
+  }
+  .ico-arrowLeft:before {
     content: "\e906";
   }
   .ico-arrowRight:before {
