--- a/src/resources/sass/style/style.scss
+++ b/src/resources/sass/style/style.scss
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: 'Nunito';
+    src: url('/storage/fonts/en/Nunito.ttf') format("truetype");
+}
+@font-face {
+    font-family: 'inter';
+    src: url('/storage/fonts/en/inter.ttf') format("truetype");
+}
+@font-face {
+    font-family: 'Tajawal';
+    src: url('/storage/fonts/ar/Tajawal.ttf') format("truetype");
+}
+.inter{font-family: 'inter', sans-serif;}
+*{-webkit-tap-highlight-color: transparent;}
+
 @import './margin.scss';
 @import './padding.scss';
 @import './zindex.scss';
