--- a/src/resources/sass/builder/website_style.scss
+++ b/src/resources/sass/builder/website_style.scss
@@ -1,2 +1,3 @@
 @import '../builder/website_style/color_palette.scss';
 @import '../builder/website_style/font_style.scss';
+@import '../builder/website_style/page_setup.scss';
