--- a/src/resources/sass/builder/website/website.scss
+++ b/src/resources/sass/builder/website/website.scss
@@ -2,6 +2,7 @@
 //     width:100%;
 //     min-height:calc(100% - 50px);
 // }
+
 .website_body{
     width:100%;
     height:calc(100% - 50px);
@@ -17,7 +18,60 @@
     }
 
 }
+
+.font_t{
+    font-family: var(--font_t);
+    line-height: var(--font_t_lh);
+    letter-spacing: var(--font_t_ls);
+    font-weight: var(--font_t_fw)
+}
+.font_p{
+    font-family: var(--font_p);
+    line-height: var(--font_p_lh);
+    letter-spacing: var(--font_p_ls);
+    font-weight: var(--font_p_fw)
+}
 .body_color_theme{
     background-color: var(--body_color_theme_bg);
     color: var(--body_color_theme_txt);
+    border-color:var(--body_color_theme_txt);
+    outline-color: var(--body_color_theme_txt);
+}
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+.input{
+    background-color: var(--input_bg_color);
+    border-width:var(--input_border_width);
+    border-style:var(--input_border_style);
+    padding:var(--input_padding);
+    border-radius:var(--input_border_radius);
+    margin:var(--form_elem_spacing);
+    margin-top:0;
+    font-size:var(--input_font_size);
+    max-width:calc(100% - (var(--form_elem_spacing) * 2) - (var(--input_padding) * 2 ));
+
+}
+.input:focus{
+    outline-style: solid;
+    outline-width: var(--input_focus_outline_width);
+}
+.input:read-only{
+    cursor: not-allowed;
+}
+.input_lable{
+    margin:var(--form_elem_spacing);
+    margin-bottom:0;
+    font-size:var(--input_label_font_size);
+
+}
+.button{
+    background-color: var(--body_color_theme_txt);
+    color: var(--body_color_theme_bg);
 }
