--- a/src/resources/sass/builder/tools/selectors.scss
+++ b/src/resources/sass/builder/tools/selectors.scss
@@ -7,19 +7,24 @@
 }
 .select_box{
     position: relative;
+    height:15px;
     margin: 4px;
     font-size: .8em;
     background-color: var(--white-2);
-    color:var(--txt-1);
+    color:var(--white-11);
     border-radius: 3px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
+    // border:.5px solid transparent
 }
 .select_box_selected{
     background-color: var(--white-1);
+    color:var(--txt-1);
     font-weight: bold;
+    // border:.5px solid var(--white-4);
+    box-shadow: 0 0 2px 1px var(--shdw-5);
 }
 //
 .color_theme_picker_container{
@@ -29,7 +34,7 @@
     position: relative;
     border-radius: 5px;
     padding:5px;
-    border:1px solid var(--white-4);
+    border:1px solid var(--white-4) !important;
     cursor: pointer;
     width:120px;
     font-size: .8em;
