--- a/src/resources/sass/builder/tools/selectors.scss
+++ b/src/resources/sass/builder/tools/selectors.scss
@@ -1,119 +1,7 @@
-.select_box_container{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    background-color: var(--white-2);
-    border-radius: 3px;
-}
-.select_box{
-    position: relative;
-    height:15px;
-    margin: 4px;
-    font-size: .8em;
-    background-color: var(--white-2);
-    color:var(--white-11);
-    border-radius: 3px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    // border:.5px solid transparent
-}
-.select_box_selected{
-    background-color: var(--white-1);
-    color:var(--txt-1);
-    font-weight: bold;
-    // border:.5px solid var(--white-4);
-    box-shadow: 0 0 2px 1px var(--shdw-5);
-}
+@import '../tools/selectors/select_box.scss';
+@import '../tools/selectors/color_theme_picker.scss';
+@import '../tools/selectors/inputList.scss';
+@import '../tools/selectors/border_radius_selector.scss';
+
+
 //
-.color_theme_picker_container{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    border-radius: 5px;
-    padding:5px;
-    border:1px solid var(--white-4) !important;
-    cursor: pointer;
-    width:120px;
-    font-size: .8em;
-}
-.color_theme_picker_themes{
-    position: fixed;
-    top:35px;
-    left:0;
-    width:140px;
-    box-sizing: border-box;
-    background-color: var(--white-1);
-    left:0;
-    margin:0;
-    box-shadow: 0 0 15px var(--shdw-20), 0 0 1px var(--shdw-5);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding:5px;
-    z-index: 185;
-    border-radius: 3px;
-    max-height:200px;
-    overflow: auto;;
-}
-.color_theme_picker_theme{
-    margin:2px 0;
-    width:calc(100%);
-    padding:5px;
-    border-radius: 5px;
-    border:1px solid var(--white-4);
-    box-sizing: border-box;
-    overflow: hidden;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-size: .8em;
-}
-//
-.inputList_container{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    border-radius: 5px;
-    padding:5px;
-    border:1px solid var(--white-4);
-    cursor: pointer;
-    min-width:120px;
-    font-size: .8em;
-}
-.inputList_elems{
-    position: fixed;
-    top:35px;
-    left:0;
-    min-width:131px;
-    box-sizing: border-box;
-    background-color: var(--white-1);
-    left:0;
-    margin:0;
-    box-shadow: 0 0 15px var(--shdw-20), 0 0 1px var(--shdw-5);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    z-index: 185;
-    border-radius: 3px;
-    max-height:200px;
-    overflow: auto;;
-}
-.inputList_elems div:nth-child(1){border: none;}
-.inputList_elem{
-    padding:3px;
-    width:calc(100%);
-    border-top:1px solid var(--white-4);
-    box-sizing: border-box;
-    overflow: hidden;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-size: .8em;
-}
-.inputList_elem:hover{
-    background-color: var(--white-2);
-}
