--- a/src/resources/sass/builder/tools/selectors.scss
+++ b/src/resources/sass/builder/tools/selectors.scss
@@ -2,6 +2,8 @@
 @import '../tools/selectors/color_theme_picker.scss';
 @import '../tools/selectors/inputList.scss';
 @import '../tools/selectors/border_radius_selector.scss';
+@import '../tools/selectors/color_selector.scss';
+@import '../tools/selectors/switch_button.scss';
 
 
 //
