--- a/src/resources/sass/builder/website/form.scss
+++ b/src/resources/sass/builder/website/form.scss
@@ -1,4 +1,12 @@
 
+.form{
+    display:flex;
+    flex-direction: column;
+    align-items: var(--form_align);
+    justify-content: flex-start;
+    width:fit-content;
+}
+//
 input[type='number'] {
     -moz-appearance:textfield;
 }
@@ -9,9 +17,10 @@ input::-webkit-inner-spin-button {
 }
 //
 .input{
+    text-align: var(--input_text_align);
     margin-bottom:var(--form_elem_spacing);
-    max-width:calc(100% - (var(--input_padding_x) * 2 ));
-
+    max-width:100%;
+    box-sizing: border-box;
     padding:var(--input_padding_y) var(--input_padding_x);
     border-width:var(--input_border_width);
     border-style:var(--input_border_style);
@@ -26,7 +35,8 @@ input::-webkit-inner-spin-button {
 .input:focus{
     outline-style: solid;
     outline-width: var(--input_focus_outline_width);
-    outline-color: var(--input_border_color);
+    outline-color: var(--input_focus_outline_color);
+    background-color: var(--input_focus_bg_color);
 }
 .input:read-only{
     cursor: not-allowed;
@@ -34,13 +44,100 @@ input::-webkit-inner-spin-button {
 .input_lable{
     margin-top:var(--form_elem_spacing);
     font-size:var(--input_label_font_size);
-    margin-inline-start:var(--input_label_margin);
+    margin-inline:var(--input_label_margin);
 }
 textarea{
     resize: none;
 }
 ////
-.button{
-    background-color: var(--body_color_theme_txt);
-    color: var(--body_color_theme_bg);
+.checkbox{
+    width:var(--checkbox_size);
+    height:var(--checkbox_size);
+    position: relative;
+    border:2px solid var(--checkbox_color);
+    cursor: pointer;
+    border-radius: var(--checkbox_border_radius);
+    margin:var(--form_elem_spacing) 0;
+}
+.checkbox_checked{
+    background-color: var(--checkbox_color);
+    color: var(--checkbox_checkMark_color);
+}
+//
+.button1{
+    max-width:100%;
+    box-sizing: border-box;
+    cursor: pointer;
+
+    border: none;
+    outline: none;
+    font-size: var(--button1_font_size);
+    padding:var(--button1_padding_y) var(--button1_padding_x);
+    background-color: var(--button1_bg_color);
+    color: var(--button1_font_color);
+    border-radius: var(--button1_border_radius);
+    outline-style: solid;
+    outline-color:var(--button1_outline_color);
+    outline-width:var(--button1_outline_width);
+}
+.button1:hover{
+    color:var(--button1_hover_font_color);
+    background-color:var(--button1_hover_bg_color);
+    outline-style: solid;
+    outline-width: var(--button1_hover_outline_width);
+    outline-color: var(--button1_hover_outline_color);
+}
+.button1:active{
+    color:var(--button1_click_font_color);
+    background-color:var(--button1_click_bg_color);
+    outline-style: solid;
+    outline-width: var(--button1_click_outline_width);
+    outline-color: var(--button1_click_outline_color);
+}
+.button1:disabled{
+    cursor: not-allowed;
+    color:var(--button1_disabled_font_color);
+    background-color:var(--button1_disabled_bg_color);
+    outline-style: solid;
+    outline-width: var(--button1_disabled_outline_width);
+    outline-color: var(--button1_disabled_outline_color);
+}
+//
+.button2{
+    max-width:100%;
+    box-sizing: border-box;
+    cursor: pointer;
+
+    border: none;
+    outline: none;
+    font-size: var(--button2_font_size);
+    padding:var(--button2_padding_y) var(--button2_padding_x);
+    background-color: var(--button2_bg_color);
+    color: var(--button2_font_color);
+    border-radius: var(--button2_border_radius);
+    outline-style: solid;
+    outline-color:var(--button2_outline_color);
+    outline-width:var(--button2_outline_width);
+}
+.button2:hover{
+    color:var(--button2_hover_font_color);
+    background-color:var(--button2_hover_bg_color);
+    outline-style: solid;
+    outline-width: var(--button2_hover_outline_width);
+    outline-color: var(--button2_hover_outline_color);
+}
+.button2:active{
+    color:var(--button2_click_font_color);
+    background-color:var(--button2_click_bg_color);
+    outline-style: solid;
+    outline-width: var(--button2_click_outline_width);
+    outline-color: var(--button2_click_outline_color);
+}
+.button2:disabled{
+    cursor: not-allowed;
+    color:var(--button2_disabled_font_color);
+    background-color:var(--button2_disabled_bg_color);
+    outline-style: solid;
+    outline-width: var(--button2_disabled_outline_width);
+    outline-color: var(--button2_disabled_outline_color);
 }
