--- a/src/resources/sass/builder/editable/section.scss
+++ b/src/resources/sass/builder/editable/section.scss
@@ -1,24 +1,92 @@
 @import '../editable/section_layouts.scss';
+@import '../editable/add_section.scss';
 
 .section_selected{
-    outline:2px solid green;
-    .element_container{outline:1px solid rgba(0, 128, 0, 0.16) ;}
+    z-index: 5;
+    box-shadow: inset 0 0 1px 1px var(--green);
+    .home_section_elements_container{box-shadow: inset 0 0 1px 1px var(--green);}
 }
-
+.section_selected:hover{
+    box-shadow: inset 0 0 1px 2px var(--green);
+}
+section{
+    transition-duration: 200ms;
+    position: relative;
+}
 section:hover{
-    .edit_section_btn{display: block;}
-    .element_container{outline:1px solid rgba(0, 128, 0, 0.16) ;}
+    transition-duration: 0ms;
+    box-shadow: inset 0 0 1px 1px var(--green);
+    position: relative;
+    .home_section_elements_container{box-shadow: inset 0 0 1px 1px var(--green);}
+    .add_home_section_btn_style{transform: scale(1);opacity: 1;}
+    .swap_home_section_up_btn, .dublicate_home_section_btn, .swap_home_section_down_btn, .edit_home_section_btn, .delete_home_section_btn{
+        transform: translateX(0px);
+    }
 }
-.edit_section_btn{
-    padding:5px 15px;
-    display: none;
+.section_btns_container{
     position: absolute;
+    flex-direction: column;
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
     top:10px;
     left:10px;
-    box-shadow: 0 0 20px var(--shdw-20);
 }
 
+.swap_home_section_up_btn, .dublicate_home_section_btn, .swap_home_section_down_btn, .edit_home_section_btn, .delete_home_section_btn{
+    transition-duration: 300ms;
+    transform: translateX(-500px);
+    min-width:unset;
+    font-size:1.3em;
+    margin:3px 0;
+    padding:8px;
+    border-radius: 50%;
+    box-shadow: 0 0 20px var(--shdw-10), 0 0 5px var(--shdw-10);
+}
+.edit_home_section_btn{transition-delay: 0ms;}
+.dublicate_home_section_btn{transition-delay: 20ms;}
+.swap_home_section_up_btn{transition-delay: 40ms;}
+.swap_home_section_down_btn{transition-delay: 60ms;}
+.delete_home_section_btn{transition-delay: 80ms;}
+.add_home_section_btn_style{
+    z-index: 10;
+    position: absolute;
+    bottom:calc(-.5em - 13px);
+    left:calc(50% - 20px);
+    cursor: pointer;
+    transition-duration: 300ms;
+    min-width:unset;
+    font-size:1.3em;
+    margin:3px 0;
+    padding:8px;
+    border-radius: 50%;
+    box-shadow: 0 0 20px var(--shdw-10), 0 0 5px var(--shdw-10);
+    transition-duration: 150ms;
+    transform: scale(0);
+    opacity: 0;
+}
+///
+.add_first_section_btn_container{
+    padding:40px 80px;
+    border:1px solid var(--white-3);
+    background-color: var(--white-2);
+    width:fit-content;
+    margin:auto;
+    margin-top:200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 
+}
+.add_first_section_btn{
+    font-size: 1.5em;
+    padding: 5px;
+    border-radius: 50%;
+    border: 1px solid var(--white-10);
+    color: var(--txt-1);
+}
 ///
 .section_style_row{
     position: relative;
@@ -29,4 +97,7 @@ section:hover{
     padding:5px;
 }
 .section_style_row:hover{background-color: var(--white-2);}
-
+//
+.highlight{
+    box-shadow: inset 0 0 1px 1px var(--green) !important;
+}
