--- a/src/resources/sass/builder/builder.scss
+++ b/src/resources/sass/builder/builder.scss
@@ -1,7 +1,7 @@
 //z-indexs
 //popup 200
+//color_theme_picker_themes 195
 //header 190
-//color_theme_picker_themes 185
 //inputList_elems 185
 //border_radius_select 185
 //editor_popup 180
@@ -157,3 +157,4 @@ a:hover{
     .home_section_container{outline: none !important;box-shadow: none !important;}
     .home_section_container:hover{outline: none !important;box-shadow: none !important;}
 }
+///
